[metadata]
name = overtest
url = https://github.com/jd/overtest
summary = Suite of tools to manage daemons for testing
description-file = README.rst
author = Julien Danjou
author-email = julien@danjou.info
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Unix Shell
    Topic :: Software Development :: Testing

[files]
scripts =
    bin/overtest
data_files =
    share/overtest/lib = lib/*

[wheel]
universal = 1
